# apoxy-cli

./: .gitignore  .goreleaser.yaml  build.sh  dagger.json  go.mod  go.sum  install.sh  main.go
.github/workflows/: dagger.yaml  dev.yaml  main.yaml  release.yaml
_examples/: backend_dynamic_forward_proxy.yaml  backend_fqdn.yaml  dev.yaml  forward_fqdn.yaml  httproute_edgefunc.yaml  path_docker_host.yaml  tunnelnode.yaml
api/controllers/v1alpha1/: BUILD.bazel  doc.go  generated.register.go  proxy_hooks.go  proxy_types.go  proxy_webhook.go  proxydeployment_types.go  proxyset_types.go  zz_generated.deepcopy.go  zz_generated.register.go
api/extensions/: doc.go  edgefunction_hooks.go  edgefunction_types.go  edgefunctionrevision_types.go  zz_generated.deepcopy.go  zz_generated.register.go
ci/: Dockerfile  README.md  dagger-client.yaml  fly.toml  go.mod  go.sum  main.go
client/informers/: factory.go  generic.go
client/versioned/: clientset.go
cmd/: alpha.go  auth.go  domain.go  k8s.go  logs.go  proxy.go  root.go  serve.go  tunnel.go
cmd/alpha/: proxy.go  run.go  tunnel.go
cmd/apiserver/: main.go
cmd/backplane/: main.go
cmd/dial-stdio/: main.go
cmd/tunnelproxy/: main.go
cmd/utils/: utils.go
codegen/: boilerplate.go.txt  update.sh
config/: auth.go  config.go  config_test.go
config/testdata/: config-unversioned.yaml  config-v1alpha1.yaml
docs/: apoxy.mdx  images.md  main.go
pretty/: logs.go  table.go  time.go
rest/: a3y.go  client.go  domains.go  k8s.go  proxies.go
web/: login-ok.html  web.go
wg/: addr.go  stun.go  tunnel.go
(+571 files in other folders)
